--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages. Yayy!</p>
-</body>
+﻿<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>CPNext</title>
+  </head>
+  <body>
+    <div id="app" style="width: 100%; height: 100%;"></div>
+    <script src="assets/js//project.js" charset="utf-8"></script>
+    <script src="dist/runtime~main.bundle.js" charset="utf-8"></script>
+    <script src="dist/vendors~main.chunk.js" charset="utf-8"></script>
+    <script src="dist/main.chunk.js" charset="utf-8"></script>
+  </body>
 </html>
